# gfx-testing

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
app/renderer/: CMakeLists.txt  cli.hpp  main.cpp
app/spirv_header_gen/: CMakeLists.txt  main.cpp  parse.cpp  parse.hpp  template.hpp.inja  write.cpp  write.hpp
cmake/: build-shaders.cmake  fetch-boost.cmake  fetch-catch2.cmake  fetch-clipp.cmake  fetch-fastgltf.cmake  fetch-glm.cmake  fetch-imgui.cmake  fetch-inja.cmake  fetch-nlohmann_json.cmake  fetch-tinyobjloader.cmake
content/models/: basic-shapes.glb  basic-shapes.mtl  cube.glb  debug-axes.mtl  tex-cube.glb  uv-sphere.mtl  viking-room.glb
content/scenes/: default.json
content/shaders/: build-shaders.sh
content/shaders/include/: buffer_macros.hlsl  object_lighting.hlsl  std_types.hlsl
content/shaders/src/: basic_textured.frag.hlsl  debug_normals.comp.hlsl  default.vert.hlsl  gooch.frag.hlsl  lambert.frag.hlsl  norm_color.frag.hlsl  pos_color_transform.vert.hlsl  pos_norm_color_transform.vert.hlsl  skybox.frag.hlsl  skybox.vert.hlsl  solid_color.frag.hlsl  vertex_color.frag.hlsl
src/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  color_target.cpp  color_target.hpp  debug_axes.cpp  debug_axes.hpp  frame_watcher.cpp  frame_watcher.hpp  game.cpp  game.hpp  imgui_context.cpp  imgui_context.hpp  obj_loader.cpp  obj_loader.hpp  pipeline.cpp  pipeline.hpp  pipeline_definition.hpp  pipelines.cpp  pipelines.hpp  point_light.cpp  point_light.hpp  render_object.cpp  render_object.hpp  resource_loader.cpp  resource_loader.hpp  samplers.cpp  samplers.hpp  scene.cpp  scene.hpp  sdl.cpp  sdl.hpp  sdl_factories.cpp  sdl_factories.hpp  shader_models.hpp  spirv_header.cpp  spirv_header.hpp  stopwatch.cpp  stopwatch.hpp  (+4 more)
src/debug/: imgui_context.cpp  imgui_context.hpp  imgui_debug_view.hpp  imgui_ecs_view.cpp  imgui_ecs_view.hpp  imgui_utils.cpp  imgui_utils.hpp
src/debug/views/: imgui_ecs_view.cpp  imgui_ecs_view.hpp  imgui_perf_view.cpp  imgui_perf_view.hpp
src/ecs/: ecs.cpp  ecs.hpp  entity.hpp  render_ecs.hpp
src/io/: gltf_loader.cpp  gltf_loader.hpp  input_manager.cpp  input_manager.hpp  obj_loader.cpp  obj_loader.hpp  resource_loader.cpp  resource_loader.hpp  scene_loader.cpp  scene_loader.hpp  texture_loader.cpp  texture_loader.hpp
src/pipeline/: buffers.hpp  pipeline.cpp  pipeline.hpp  pipeline_definition.hpp  pipelines.cpp  pipelines.hpp  util.hpp
src/pipeline/compute/: pipeline.cpp  pipeline.hpp  pipeline_definition.hpp
src/pipeline/gfx/: pipeline.cpp  pipeline.hpp  pipeline_definition.hpp
src/render/: camera.cpp  camera.hpp  debug_axes.cpp  debug_axes.hpp  debug_normals.cpp  debug_normals.hpp  draw_context.cpp  draw_context.hpp  point_light.cpp  point_light.hpp  render_object.cpp  render_object.hpp  samplers.cpp  samplers.hpp  scene.cpp  scene.hpp  scene_objects.cpp  scene_objects.hpp  sky_box.cpp  sky_box.hpp
src/shader/: mesh.hpp  object.cpp  object.hpp  shader_models.hpp  spirv_header.hpp  util.hpp  vertex.hpp
src/util/: check.hpp  cube_map.cpp  cube_map.hpp  debug.hpp  fps_capper.cpp  fps_capper.hpp  gltf_loader.cpp  gltf_loader.hpp  mesh.cpp  mesh.hpp  obj_loader.cpp  obj_loader.hpp  optional.hpp  ref.hpp  resource_loader.cpp  resource_loader.hpp  scoped_timer.cpp  scoped_timer.hpp  stopwatch.cpp  stopwatch.hpp  texture_loader.cpp  texture_loader.hpp  util.cpp  util.hpp
tests/: gltf_loader_tests.cpp  matchers.hpp  mesh_tests.cpp  obj_loader_tests.cpp  util.hpp
tests/io/: gltf_loader_tests.cpp  obj_loader_tests.cpp
tests/render/: camera_tests.cpp
tests/shader/: mesh_tests.cpp
tests/util/: coord_tests.cpp
